--- a/index.html
+++ b/index.html
@@ -72,7 +72,18 @@
     <div class="text-bind pic60"></div>
     <div class="text-bind pic61"></div>
     <div class="text-bind pic62"></div>
-
+    <!-- <p>
+        Há nhô, vẫn là anh đây :v <br/>
+        Lúc bé đọc được những dòng này, anh mong bé đang trong vòng tay anh (theo kế hoạch là như vậy).Sao nhỉ, anh chỉ muốn nói lời cảm ơn thôi, cảm ơn em đã bước đến và vẫn luôn ở đây,
+        cảm ơn em đã rep tin nhắn anh vào hôm đó, cảm ơn vì sự quan tâm ân cần em mang lại, cảm ơn vì những lời nói yêu ta trao nhau vào sáng sớm, cảm ơn những cái ôm, nắm tay, môi hôn thật ngọt ngào từ iêm, 
+        cảm ơn vì những niềm vui, và cảm ơn cả những nỗi buồn nữa :v </br>
+        Có lẽ cách mà anh xuất hiện không được hợp lí như những mối tình của em trước đây, nhưng anh nghĩ mình gặp nhau đã là duyên rồi, ở lại nữa phải là định mệnh. Trước khi gặp em thực sự anh đã nghĩ
+        hạnh phúc đến từ tình yêu có lẽ không thuộc về mình, "trái tim này đã vụn vỡ từ lâu rồi", anh đã giỡn như vậy phải không :v, nhưng em đã đến và thật nhanh cho anh thấy anh cũng có thể được
+        yêu một người nhiều đến vậy.Tuy cũng có nhiều lúc anh vụng về làm em giận, làm em buồn nhưng đừng quên, anh yêu em, cố hoàn thiện nhất để yêu em, trân trọng từng phút ở bên em (trông thế thôi chứ 
+        anh cũng có lúc nhạy cảm, đôi khi cũng biết buồn 1 tí :v) </br>
+        Văn vở cũng mỏi tay ròi, chúc em cùng gia đình giáng sinh hạnh phúc.</br    >
+        Giáng sinh này, có anh, yêu em.
+    </p> -->
     <script type="text/javascript" src="script.js"></script>    
 </body>
 </html>
