--- a/index.html
+++ b/index.html
@@ -10,50 +10,50 @@
     <div id="gift">
         <img src="gift.png" alt="">
     </div>
-    <div class="text-bind pic1"></div>
-    <div class="text-bind pic2"></div>
-    <div class="text-bind pic3"></div>
-    <div class="text-bind pic4"></div>
-    <div class="text-bind pic5"></div>
-    <div class="text-bind pic6"></div>
-    <div class="text-bind pic7"></div>
-    <div class="text-bind pic8"></div>
-    <div class="text-bind pic9"></div>
-    <div class="text-bind pic10"></div>
-    <div class="text-bind pic11"></div>
-    <div class="text-bind pic12"></div>
-    <div class="text-bind pic13"></div>
-    <div class="text-bind pic14"></div>
-    <div class="text-bind pic15"></div>
-    <div class="text-bind pic16"></div>
-    <div class="text-bind pic17"></div>
-    <div class="text-bind pic18"></div>
-    <div class="text-bind pic19"></div>
-    <div class="text-bind pic20"></div>
-    <div class="text-bind pic21"></div>
-    <div class="text-bind pic22"></div>
-    <div class="text-bind pic23"></div>
-    <div class="text-bind pic24"></div>
-    <div class="text-bind pic25"></div>
-    <div class="text-bind pic26"></div>
-    <div class="text-bind pic27"></div>
-    <div class="text-bind pic28"></div>
-    <div class="text-bind pic29"></div>
-    <div class="text-bind pic30"></div>
-    <div class="text-bind pic31"></div>
-    <div class="text-bind pic32"></div>
-    <div class="text-bind pic33"></div>
-    <div class="text-bind pic34"></div>
-    <div class="text-bind pic35"></div>
-    <div class="text-bind pic36"></div>
-    <div class="text-bind pic37"></div>
-    <div class="text-bind pic38"></div>
-    <div class="text-bind pic39"></div>
-    <div class="text-bind pic40"></div>
-    <div class="text-bind pic41"></div>
-    <div class="text-bind pic42"></div>
-    <div class="text-bind pic43"></div>
-    <div class="text-bind pic44"></div>
+    <div class="text-bind pic1">1</div>
+    <div class="text-bind pic2">2</div>
+    <div class="text-bind pic3">3</div>
+    <div class="text-bind pic4">4</div>
+    <div class="text-bind pic5">5</div>
+    <div class="text-bind pic6">6</div>
+    <div class="text-bind pic7">7</div>
+    <div class="text-bind pic8">8</div>
+    <div class="text-bind pic9">9</div>
+    <div class="text-bind pic10">10</div>
+    <div class="text-bind pic11">11</div>
+    <div class="text-bind pic12">12</div>
+    <div class="text-bind pic13">13</div>
+    <div class="text-bind pic14">14</div>
+    <div class="text-bind pic15">15</div>
+    <div class="text-bind pic16">16</div>
+    <div class="text-bind pic17">17</div>
+    <div class="text-bind pic18">18</div>
+    <div class="text-bind pic19">19</div>
+    <div class="text-bind pic20">20</div>
+    <div class="text-bind pic21">21</div>
+    <div class="text-bind pic22">22</div>
+    <div class="text-bind pic23">23</div>
+    <div class="text-bind pic24">24</div>
+    <div class="text-bind pic25">25</div>
+    <div class="text-bind pic26">26</div>
+    <div class="text-bind pic27">27</div>
+    <div class="text-bind pic28">28</div>
+    <div class="text-bind pic29">29</div>
+    <div class="text-bind pic30">30</div>
+    <div class="text-bind pic31">31</div>
+    <div class="text-bind pic32">32</div>
+    <div class="text-bind pic33">33</div>
+    <div class="text-bind pic34">34</div>
+    <div class="text-bind pic35">35</div>
+    <div class="text-bind pic36">36</div>
+    <div class="text-bind pic37">37</div>
+    <div class="text-bind pic38">38</div>
+    <div class="text-bind pic39">39</div>
+    <div class="text-bind pic40">40</div>
+    <div class="text-bind pic41">41</div>
+    <div class="text-bind pic42">42</div>
+    <div class="text-bind pic43">43</div>
+    <div class="text-bind pic44">44</div>
     <div class="text-bind pic45"></div>
     <div class="text-bind pic46"></div>
     <div class="text-bind pic47"></div>
@@ -72,9 +72,9 @@
     <div class="text-bind pic60"></div>
     <div class="text-bind pic61"></div>
     <div class="text-bind pic62"></div>
-    <!-- <p>
+    <p id="vanvo">
         
-    </p> -->
+    </p>
     <script type="text/javascript" src="script.js"></script>    
 </body>
 </html>
